Fix image overflow in mobile browser

--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -92,3 +92,8 @@ $header-image-width: 172px;
   width: $header-image-width;
   vertical-align: middle;
 }
+
+.single-post-content img {
+  width: 100%;
+  height: auto;
+}
